  and Xavier Leroy)

- #9619: Change representation of function closures so that code pointers
  can be easily distinguished from environment variables
  (Xavier Leroy, review by Mark Shinwell and Damien Doligez)

- #9634: Allow initial and repeated commas in `OCAMLRUNPARAM`.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #9649: Update the marshaler (output_value) to take advantage
  of the new representation for function closures
  (Xavier Leroy, review by Damien Doligez)

- #9654: More efficient management of code fragments.
  (Xavier Leroy, review by Jacques-Henri Jourdan, Damien Doligez, and
  Stephen Dolan)

- #9675: Remove the caml_static_{alloc,free,resize} primitives, now unused.
  (Xavier Leroy, review by Gabriel Scherer)

### Code generation and optimizations:

- #9620: Limit the number of parameters for an uncurried or untupled
   function.  Functions with more parameters than that are left
   partially curried or tupled.
   (Xavier Leroy, review by Mark Shinwell)

### Standard library:

* #9554: add primitive __FUNCTION__ that returns the name of the current method
  or function, including any enclosing module or class.
  (Nicolás Ojeda Bär, Stephen Dolan, review by Stephen Dolan)

- #9075: define to_rev_seq in Set and Map modules.
  (Sébastien Briais, review by Gabriel Scherer and Nicolás Ojeda Bär)

- #9561: Unbox Unix.gettimeofday and Unix.time
  (Stephen Dolan, review by David Allsopp)

- #9570: Provide an Atomic module with a trivial purely-sequential
  implementation, to help write code that is compatible with Multicore
  OCaml.
  (Gabriel Scherer, review by Xavier Leroy)

- #9571: Make at_exit and Printexc.register_printer thread-safe.
  (Guillaume Munch-Maccagnoni, review by Gabriel Scherer and Xavier Leroy)

- #9587: Arg: new Rest_all spec to get all rest arguments in a list
  (this is similar to Rest, but makes it possible to detect when there
   are no arguments (an empty list) after the rest marker)