@@ -50,6 +50,10 @@ Working version
 - #9634: Allow initial and repeated commas in `OCAMLRUNPARAM`.
   (Nicolás Ojeda Bär, review by Gabriel Scherer)
 
+- #9648, #9689: Update the generic hash function to take advantage
+  of the new representation for function closures
+  (Xavier Leroy, review by Stephen Dolan)
+
 - #9649: Update the marshaler (output_value) to take advantage
   of the new representation for function closures
   (Xavier Leroy, review by Damien Doligez)
